# Parallax

./: .gitignore  README.md  a.bat  config.py  d.bat  data_collector.py  fine_tune.py  inference.py  init_model.py  model.py  prepare_data.py  pyproject.toml  qtok.py  setup.bat
model/parallax/: __init__.py  configuration_parallax.py  modeling_parallax.py
scripts/: fine_tune.py  inference.py  init_model.py  train.py
scripts/dataset/: data_collector.py  prepare_data.py
scripts/tools/: check.py  count_tokens.py  diag.py  export_to_hf.py  gen_inference.py  inspect_checkpoint.py  qtest.py  qtok.py
scripts/transplant/: inference_transplant.py  transplant_stream.py
whl/: flash_attn-2.8.3+cu130torch2.10.0cxx11abiTRUE-cp313-cp313-win_amd64.whl
