# If you wish to use this option, enter the following on the command line:
# pip install -e .
# Otherwise, run the scripts as a "forced" module as below:
# > python -m scripts.train --checkpoint_dir checkpoints/parallax_test ...
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parallax"
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["model*"]